--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </header>
   <section class="mt-10">
         <div class="max-w-xl flex justify-center shadow-xl mx-auto justify-center">
-          <span class="text-indigo-700 to-purple-800 max-w-sm items-center text-mono  font-bold text-center text-xl">Welcome To Reigner's Nation where Men are Equipped To live victoriously here on earth</span>
+          <span class="max-w-sm items-center text-mono  font-bold text-center text-xl">Welcome To Reigner's Nation where Men are Equipped To live victoriously here on earth</span>
         </div>
   </section>
    <section>
