--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body class="bg-[#FAF3E0] ">
   <header>
-    <div class="bg-gray-500 shadow-lg">
+    <div class="bg-[#0A0F2C] shadow-lg">
         <div class="grid grid-cols-2">
-            <div><img src="media/b.jpg" alt="" class="rounded-[50px] h-20 w-20"></div>
+            <div><img src="media/b.jpg" alt="" class="rounded-[50px] h-10 w-10"></div>
             <div class="nav">
                 <nav class="flex justify-end text-white">
                     <ul class="flex " id="dark">
