--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
 
   <section>
     <div>
-        <h2 class="text-center font-bold">Sermons</h2>
+        <h2 class="text-center font-bold my-2">Sermons</h2>
             <p class="text-center italic"> "mattew 3:3 Deliverance can be preached"
             <br>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur maiores facilis animi?
         </p>
-            <h3 class="text-center font-extrabold text-2xl text-gray-900">Listen to Our Messages Across diferent Platforms</h3>
+            <h3 class="my-5 text-center font-extrabold text-2xl text-gray-900">Listen to Our Messages Across diferent Platforms</h3>
        <div class="relative max-w-4xl mx-auto overflow-hidden rounded-xl shadow-lg">
-            <div id="slider" class="flex transition-transform duration-700 ease-in-out">
+            <div id="slider" class="my-5 flex transition-transform duration-700 ease-in-out">
             <img src="media/youtube.png" class="w-full h-[50%] flex-shrink-0">
             <img src="media/social3.jpeg" class="w-full h-[50%] flex-shrink-0">
             <img src="media/youtube2.png" class="w-full h-[50%] flex-shrink-0">
