--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
   </section>
    <section>
-    <div class="h-screen flex items-center justify-center">
+    <div class="my-10 flex items-center justify-center">
         <div class="grid grid-cols-2">
             <div class=" text-center justify-end">
                 <h3 class="font-bold text-xl text-center">Our Vision</h3>
