--- a/index3.html
+++ b/index3.html
@@ -14,7 +14,7 @@
             <div class="nav">
                 <nav class="flex justify-end text-white">
                     <ul class="flex" id="dark">
-                        <li class="mx-5"><a href="#dashboard">Dashboard</a></li>
+                        <li class="mx-5 hover:text-blue-500"><a href="#dashboard">Dashboard</a></li>
                         <li class="mx-5"><a href="#services">Services</a></li>
                         <li class="mx-5"><a href="#latestproject">Projects</a></li>
                         <li class="mx-5 "><a href="#about">About</a></li>
@@ -50,15 +50,15 @@
                 <span class="flex justify-center">
                     <div class="border-1px text-center w-60">
                         <span class="shadow-xl text-white">Fullstack Web Developer</span>
-                        <p class="shadow-50xl">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta, delectus porro ratione, ullam tenetur repudiandae iure cupiditate possimus, doloremque est quos qui magnam maiores ab aliquam quibusdam amet esse. Aspernatur?</p>
+                        <p class="shadow-50xl">My passion to solve man problems through tech has been the diving force which actually made me to learn and developing skills in all these programming languages</p>
                     </div>
                 </span>
                 <span class="justify-end items-end">
-                    <p><span class="TT">Frontend:</span> React, Tailwind, etc. <br>
+                    <p><span class="TT">Frontend:</span> CSS, Html, Javascript etc. <br>
 
-                        <span class="TT">Backend: </span>Node.js, Express, PostgreSQL, etc. <br>
+                        <span class="TT">Backend: </span>PHP, Python etc. <br>
 
-                        <span class="TT">DevOps/Deployment:</span> Docker, Vercel, CI/CD
+                        <span class="TT">Techstack:</span> ReactJs, NextJs
                     </p>
                 </span>
             </div>
@@ -68,22 +68,25 @@
         </div>
     </section>
 
-    <section id="latestproject">
-        <div class="flex h-screen justify-center items-center">
-        <div class="grid grid-cols-2 justify-center gap-2 mx-3">
-            <div class="flex flex-wrap justify-center bg-[#EDEEF6] rounded-md text-center">
-                <img src="media/d.jpg" alt="" class="bg-blue-500 rounded-xl w-full md:w-80">
-                <button class="relative bottom-10 right-20">Out</button>
-                <p class="text-[#2f2d38]">A website </p>
+    <section id="latestproject" class="py-16 px-6 text-center">
+        <h2 class="text-3xl font-bold mb-10 flex-shrink-0">My Projects</h2>
+            <div class="grid gap-6 md:grid-cols-3">
+                <div class="glass p-6 rounded-xl shadow-xl transition hover:scale-105 bg-white">
+                    <img src="media/Screenshot.png" alt="">
+                    <h3 class="text-xl font-semibold mb-2">A church Weebsite</h3>
+                    <p class="text-sm">Equipping the next generation to lead in purpose and purity.</p>
+                </div>
+                <div class="glass p-6 rounded-xl shadow-xl transition hover:scale-105 bg-white">
+                    <img src="media/church/2.jpg" alt="">
+                    <h3 class="text-xl font-semibold mb-2">Worship Team</h3>
+                    <p class="text-sm">Leading hearts into God’s presence through powerful worship.</p>
             </div>
-
-            <div class="flex flex-wrap justify-center text-center bg-[#EDEEF6] rounded-md text-center">
-                <img src="media/d.jpg" alt="" class="rounded-xl w-60 md:w-80">
-                <button class="relative bottom-10 right-20">Out</button>
-                <p class="text-[#2f2d38]">An app specially made for developers, Trust me when I say it really boosts your skill</p>
+             <div class="glass p-6 rounded-xl shadow-xl transition hover:scale-105 bg-white">
+                    <img src="media/church/2.jpg" alt="">
+                    <h3 class="text-xl font-semibold mb-2">Worship Team</h3>
+                    <p class="text-sm text-black">Leading hearts into God’s presence through powerful worship.</p>
             </div>
-        </div>
-        </div>
+      </div>
     </section>
     <section class="About grid h-100 items-center" id="about">
         <h1 class="text-center uppercase font-bold text-xl text-teal-500">About Me</h1>
@@ -93,7 +96,7 @@
                     <img src="media/me.jpg" alt="" class="w-40 rounded-full md:w-60 ">
                 </span>
                 <div class="text-left mx-5 shadow-xl">
-                    <p class="text-center">“I started coding because I wanted to build a tool for my college band. Now I love building clean, performant web apps.”</p>
+                    <p class="text-center">“My passion for solving real human problems through technology has been the driving force behind my journey into web development. Today, I build clean, high-performance web applications and I’m committed to pushing boundaries till I satisfy most of the needs of man which my niche can achieve”</p>
                 </div>
             </div>
         </div>
@@ -104,12 +107,12 @@
         <div class="flex gap-4 h-70 items-center">
             <div class="flex flex-col">
                 <span class="underline">Name : Okwor Innocent Chidera</span>
-                <span>email:</span>
-                <span>Mobile number:</span>
+                <span>email:  innocent123chidera@gmail.com</span> <a href="mailto:innocent123chidera@gmail.com" class="w-30 rounded-full p-1.5 bg-gradient-to-br from-[##8174D6] to-indigo-700 hover:bg-blue-500">Send Email</a>
+                <span class="my-5">Mobile number: +234 704 517 2801</span>
             </div>
-            <div class="flex flex-col">
-                <span>Linked In:</span>
-                <span>Github:</span>
+            <div class="flex flex-col mx-10">
+                <span>Linked In:  linkedin.com/in/innocent-okwor-b5937b36a</span>
+                <span>Github:  </span>
                 
             </div> 
     </section>
