--- a/index.html
+++ b/index.html
@@ -1,124 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="media/e.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="css/reigner.css">
+     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <title>Reigner's Nation</title>
 </head>
-<body class="bg-[#0A0F2C] text-white">
-    <header id="dashboard">
-        <div class="grid grid-cols-2 fixed">
-            <div class="logo"><span class="filter-blur bg-teal-500 rounded-xl shadow-50xl text-center font-bold text-2xl">INNCODE</span></div>
+<body class="bg-[#FAF3E0] ">
+  <header>
+    <div class="bg-[#0A0F2C] shadow-lg">
+        <div class="grid grid-cols-2">
+            <div><img src="media/b.jpg" alt="" class="rounded-[50px] h-10 w-10"></div>
             <div class="nav">
                 <nav class="flex justify-end text-white">
-                    <ul class="flex" id="dark">
-                        <li class="mx-5 hover:text-blue-500"><a href="#dashboard">Dashboard</a></li>
-                        <li class="mx-5"><a href="#services">Services</a></li>
-                        <li class="mx-5"><a href="#latestproject">Projects</a></li>
-                        <li class="mx-5 "><a href="#about">About</a></li>
-                        <li class="mx-5"><a href="#contact">Contact</a></li>
+                    <ul class="flex " id="dark">
+                        <li class="mx-5 hover:text-[#D4AF37]"><a href="#dashboard">Home</a></li>
+                        <li class="mx-5 hover:text-[#D4AF37]"><a href="#services">About</a></li>
+                        <li class="mx-5 hover:text-[#D4AF37]"><a href="#latestproject">Sermons</a></li>
+                        <li class="mx-5 hover:text-[#D4AF37]"><a href="#about">Visit</a></li>
+                        <li class="mx-5 hover:text-[#D4AF37]"><a href="#contact">Give/Donate</a></li>
+                        <li class="mx-5 hover:text-[#D4AF37]"><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
-    </header>
-    <section>
-        <div class="grid grid-cols-2 h-screen items-center">
-            <div class="flex justify-end text-center flex-wrap">
-                <span class="mx-5">
-                    <h3 class="font-bold text-xl">Hi, I'm Inncode,</h3>
-                    <p class="">a Full-Stack Developer who builds modern, scalable web apps.
-                    I turn complex ideas into smooth digital experiences with clean code and thoughtful design.</p>
-                    <div class="my-3 flex gap-2 items-center justify-center flex-wrap">
-                        <a href="#latestproject" class="px-3 rounded-md p-1.5 bg-gradient-to-br from-[##8174D6] to-indigo-700 hover:bg-blue-500">View My works</a>
-                        <a href="#contact" class="px-3 rounded-md p-1.5 bg-gradient-to-br from-[##8174D6] to-indigo-700 hover:bg-blue-500">Contact me</a>
-                    </div>
-                </span>
+    </div>
+  </header>
+  <section class="mt-10">
+        <div class="max-w-xl flex justify-center shadow-xl mx-auto justify-center">
+          <span class="max-w-sm items-center text-mono  font-bold text-center text-xl">Welcome To Reigner's Nation where Men are Equipped To live victoriously here on earth</span>
+        </div>
+  </section>
+   <section>
+    <div class="my-10 flex items-center justify-center">
+        <div class="grid grid-cols-2">
+            <div class=" text-center justify-end">
+                <h3 class="font-bold text-xl text-center">Our Vision</h3>
+                <p>We have a calling and vision to spread to all men the victorious life in christ enabling them to reign in life, this means that we have the vision to .... </p>
+                <a href="#" class="text-center bg-gradient-to-br from-[#D4AF37] to-[#7D3C3C] rounded-md hover:bg-blue-500">Our Philosophy</a>
             </div>
-            <div class="max-w-sm">
-                <img src="media/me2.jpg" alt="" class="rounded-full ">
+            <div>
+                <img src="media/congegation.jpg" alt="" class="rounded-[30px] md:w-90 h-90">
             </div>
         </div>
-    </section>
+    </div>
+   </section>
 
-    <section id="services">
-        <div class="h-screen grid items-center">
-            <h1 class="text-center font-mono font-extrabold text-5xl text-teal-500">What I  Do</h1>
-            <div class="grid grid-cols-2">
-                <span class="flex justify-center">
-                    <div class="border-1px text-center w-60">
-                        <span class="shadow-xl text-white">Fullstack Web Developer</span>
-                        <p class="shadow-50xl">My passion to solve man problems through tech has been the diving force which actually made me to learn and developing skills in all these programming languages</p>
-                    </div>
-                </span>
-                <span class="justify-end items-end">
-                    <p><span class="TT">Frontend:</span> CSS, Html, Javascript etc. <br>
-
-                        <span class="TT">Backend: </span>PHP, Python etc. <br>
-
-                        <span class="TT">Techstack:</span> ReactJs, NextJs
-                    </p>
-                </span>
-            </div>
-            <div class="text-center text-[#2f2d38] font-bold">
-                <p class="text-[#EDEEF6]"> I do more than write code- I solve business problems, priorities user experience and optimize performance.</p>
-            </div>
+   <section>
+    <div class=" grid justify-center items-center">
+        <div class="text-center">
+            <h3 class="font-extrabold text-3xl text-center">Services Times</h3>
+            <p class="text-[#D4AF37]">Join us in worship</p>
         </div>
-    </section>
-
-    <section id="latestproject" class="py-16 px-6 text-center">
-        <h2 class="text-3xl font-bold mb-10 flex-shrink-0">My Projects</h2>
-            <div class="grid gap-6 md:grid-cols-3">
-                <div class="glass p-6 rounded-xl shadow-xl transition hover:scale-105 bg-white">
-                    <img src="media/Screenshot.png" alt="">
-                    <h3 class="text-xl font-semibold mb-2">A church Weebsite</h3>
-                    <p class="text-sm">Equipping the next generation to lead in purpose and purity.</p>
-                </div>
-                <div class="glass p-6 rounded-xl shadow-xl transition hover:scale-105 bg-white">
-                    <img src="media/church/2.jpg" alt="">
-                    <h3 class="text-xl font-semibold mb-2">Worship Team</h3>
-                    <p class="text-sm">Leading hearts into God’s presence through powerful worship.</p>
-            </div>
-             <div class="glass p-6 rounded-xl shadow-xl transition hover:scale-105 bg-white">
-                    <img src="media/church/2.jpg" alt="">
-                    <h3 class="text-xl font-semibold mb-2">Worship Team</h3>
-                    <p class="text-sm text-black">Leading hearts into God’s presence through powerful worship.</p>
-            </div>
-      </div>
-    </section>
-    <section class="About grid h-100 items-center" id="about">
-        <h1 class="text-center uppercase font-bold text-xl text-teal-500">About Me</h1>
+    </div>
+   </section>
+   
+   <section class="">
+    <div class="my-6">
         <div class="flex justify-center">
-            <div class="grid grid-cols-2 items-center">
-                <span class="flex justify-end">
-                    <img src="media/me.jpg" alt="" class="w-40 rounded-full md:w-60 ">
-                </span>
-                <div class="text-left mx-5 shadow-xl">
-                    <p class="text-center">“My passion for solving real human problems through technology has been the driving force behind my journey into web development. Today, I build clean, high-performance web applications and I’m committed to pushing boundaries till I satisfy most of the needs of man which my niche can achieve”</p>
-                </div>
+        <div class="w-full max-w-lg relative overflow-hidden rounded-xl shadow-lg">
+            <div class="flex transition-transform duration-500 ease-in-out" id="slides">
+                <img src="media/church/1.jpg" alt="" class="flex-shrink-0">
+                <img src="media/church/2.jpg" alt="" class="flex-shrink-0">
+                <img src="media/church/3.jpg" alt="" class="flex-shrink-0">
+                <img src="media/church/4.jpg" alt="" class="flex-shrink-0">
+                <img src="media/church/5.jpg" alt="" class="flex-shrink-0">
+            </div>
+            <button id="prev" onclick="prev()" class="absolute top-1/2 rounded-full bg-white p-2 left-2 ">  ◀</button>
+            <button id="Next" onclick="next()" class="absolute top-1/2 rounded-full bg-white p-2 right-2 ">  ▶</button>
+        </div>
+        </div>
+        </div>
+   </section>
+
+   <section class="py-16 px-6 bg-gray-100 text-center">
+    <h2 class="text-3xl font-bold mb-10">Our Ministries</h2>
+    <div class="grid gap-6 md:grid-cols-3">
+      <div class="glass p-6 rounded-xl shadow-xl transition hover:scale-105 bg-white">
+        <img src="media/church/1.jpg" alt="">
+        <h3 class="text-xl font-semibold mb-2">Youth & Teens</h3>
+        <p class="text-sm">Equipping the next generation to lead in purpose and purity.</p>
+      </div>
+      <div class="glass p-6 rounded-xl shadow-xl transition hover:scale-105 bg-white">
+        <img src="media/church/2.jpg" alt="">
+        <h3 class="text-xl font-semibold mb-2">Worship Team</h3>
+        <p class="text-sm">Leading hearts into God’s presence through powerful worship.</p>
+      </div>
+      <div class="glass p-6 rounded-xl shadow-xl transition hover:scale-105 bg-white">
+        <img src="media/church/3.jpg" alt="">
+        <h3 class="text-xl font-semibold mb-2">Evangelism Squad</h3>
+        <p class="text-sm">Carrying the gospel into streets, souls, and digital spaces.</p>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div>
+        <h2 class="text-center font-bold my-2">Sermons</h2>
+            <p class="text-center italic"> "mattew 3:3 Deliverance can be preached"
+            <br>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur maiores facilis animi?
+        </p>
+            <h3 class="my-5 text-center font-extrabold text-2xl text-gray-900">Listen to Our Messages Across diferent Platforms</h3>
+       <div class="relative max-w-4xl mx-auto overflow-hidden rounded-xl shadow-lg">
+            <div id="slider" class="my-5 flex transition-transform duration-700 ease-in-out">
+            <img src="media/youtube.png" class="w-full h-[50%] flex-shrink-0">
+            <img src="media/social3.jpeg" class="w-full h-[50%] flex-shrink-0">
+            <img src="media/youtube2.png" class="w-full h-[50%] flex-shrink-0">
             </div>
         </div>
-    </section>
+    </div>
 
-    <section id="contact">
-        <h3 class="capitalize text-center text-2xl text-teal-500">Let's build something great together</h3>
-        <div class="flex gap-4 h-70 items-center">
-            <div class="flex flex-col">
-                <span class="underline">Name : Okwor Innocent Chidera</span>
-                <span>email:  innocent123chidera@gmail.com</span> <a href="mailto:innocent123chidera@gmail.com" class="w-30 rounded-full p-1.5 bg-gradient-to-br from-[##8174D6] to-indigo-700 hover:bg-blue-500">Send Email</a>
-                <span class="my-5">Mobile number: +234 704 517 2801</span>
-            </div>
-            <div class="flex flex-col mx-10">
-                <span>Linked In:  linkedin.com/in/innocent-okwor-b5937b36a</span>
-                <span>Github:  </span>
-                
-            </div> 
-    </section>
-    <section class="bg-[#2F2D38]">
-        <h3 class="text-center">Blog</h3>
-        <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia architecto perferendis natus?</p>
-    </section>
+  </section>
+  <section class="py-16  text-white text-center bg-[#0A0F2C]">
+    <h2 class="text-3xl font-bold mb-6">Connect With Us</h2>
+    <p class="mb-2">📍 Obe Agbani, Enugu state</p>
+    <p class="mb-2">📧 reignerschurch@gmail.com</p>
+    <p class="mb-6">📞 +234 810 374 5546</p>
+    <a href="mailto:reignerschurch@gmail.com" class="inline-block px-6 py-3 bg-yellow-400 text-black rounded-full font-bold hover:bg-yellow-300 transition">Send Email</a>
+  </section>
+   <script>
+        const slides = document.getElementById("slides");
+        const slider = document.getElementById("slider");
+        const images = slides.querySelectorAll("img");
+        const totalSlides = slider.children.length;
+        let index = 0;
+         function next(){
+           index = (index + 1) % images.length
+           slides.style.transform = `translateX(-${index * 100}%)`;
+        }
+        function prev(){
+            index = (index - 1 + images.length) % images.length
+             slides.style.transform = `translateX(-${index * 100}%)`;
+        }
+        function updateSlide() {
+            slider.style.transform = `translateX(-${index * 100}%)`;
+        }
+         function nextSlide() {
+            index = (index + 1) % totalSlides;
+            updateSlide();
+        }
+        function prevSlide() {
+            index = (index - 1 + totalSlides) % totalSlides;
+            updateSlide();
+        }
+
+       
+
+        setInterval(nextSlide, 4000);
+   </script>
 </body>
-</html>
