--- a/tweakz_clonesignin.html
+++ b/tweakz_clonesignin.html
@@ -7,13 +7,11 @@
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
+<body class="bg-gradient-to-br from-purple-200 to-indigo-700">
     <div class="grid md:grid-cols-2 items-center h-screen">
         <div class="flex bg-gradient-to-br from-purple-200 to-indigo-700 shadow-md h-screen items-center">
-            <form action="sign_up.php" method="post">
+            <form action="sign_in.php" method="post">
                  <div class="md:w-0 h-5 w-5 bg-gray-700 absolute bg-opacity-10" id="brick"></div>
-                <label for="Fullname" class="ml-5 font-bold ">Your Fullname</label>
-                <input type="text" id="Fullname" name="fullname" class="bg-white border-1 caret-blue-500 md:w-100"><br><br>
                 <label for="email" class="ml-5 font-bold ">Your email</label>
                 <div class="md:w-0 h-5 w-5 bg-gray-700 absolute bg-opacity-10 bottom-0 right-0" id="brick"></div>
                 <div class="md:w-0 h-5 w-5 bg-gray-700 absolute bg-opacity-10 bottom-0 left-0 rounded-full" id="brick"></div>
@@ -21,11 +19,11 @@
                 <label for="password" class="ml-5 font-bold ">Password</label>
                 <input type="password" id="password" name="password" class="bg-white border-1 caret-blue-500 md:w-100"><br><br>
                 <div class="md:w-0 h-20 w-20 bg-gray-700 absolute left-50 bg-opacity-10" id="brick"></div>
-                <button type="submit" class="ml-5 bg-slate-300 shadow-xl w-30 rounded-md font-bold" name="sign_up">Submit</button>
-                <a href="tweakz_clonesignin.html" class="bg-gradient-to-br from-purple-200 to-indigo-700 text-center font-bold mx-10 rounded-full p-2 cursor-pointer hover:from-purple-600 to-indigo-700 text-white">Login</a>
+                <button type="submit" class="ml-5 bg-slate-300 shadow-xl w-30 rounded-md font-bold">Login</button>
+                <a href="tweakz_clonesignup.html" class="bg-gradient-to-br from-purple-200 to-indigo-700 text-center font-bold mx-10 rounded-full p-2 cursor-pointer hover:from-purple-600 to-indigo-700 text-white">sign-up</a>
             </form>
         </div>
-        <div class="md:flex hidden relative justify-center bg-gradient-to-br from-purple-200 to-indigo-700 h-screen overflow-hidden">
+        <div class="md:flex hidden justify-center h-screen overflow-hidden">
             <div class="rounded-md h-10 w-10 bg-gray-500 absolute bottom-100 right-70 bg-opacity-10" id="brick"></div>
             <div class="h-20 w-20 bg-gray-700 absolute left-50 bg-opacity-10" id="brick"></div>
             <div class="h-5 w-5 bg-gray-700 rounded-full absolute bottom-0 left-0 bg-opacity-30" id="brick"></div>
@@ -34,11 +32,3 @@
     </div>
 </body>
 </html>
-
-<?php
-session_start();
-if(isset($_POST["sign_up"])){
-$Fullname = $_POST["fullname"];
-echo("Fullname");
-}
-?>
