--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" href="media/1.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -70,21 +71,18 @@
 
     <section id="latestproject" class="py-16 px-6 text-center">
         <h2 class="text-3xl font-bold mb-10 flex-shrink-0">My Projects</h2>
-            <div class="grid gap-6 md:grid-cols-3">
-                <div class="glass p-6 rounded-xl shadow-xl transition hover:scale-105 bg-white">
-                    <img src="media/Screenshot.png" alt="">
-                    <h3 class="text-xl font-semibold mb-2">A church Weebsite</h3>
-                    <p class="text-sm">Equipping the next generation to lead in purpose and purity.</p>
+        <div class="flex justify-center">
+            <div class="grid gap-6 md:grid-cols-2">
+                <div class=" px-6 rounded-xl shadow-xl transition hover:scale-105 bg-black text-white max-w-sm">
+                    <img src="media/b.jpg" alt="">
+                    <h3 class="text-xl font-semibold mb-2">Reigners</h3>
+                    <p class="text-sm">A beautifully crafted church website with member login, event updates, and powerful content management. Come explore the experience!</p>
                 </div>
-                <div class="glass p-6 rounded-xl shadow-xl transition hover:scale-105 bg-white">
-                    <img src="media/church/2.jpg" alt="">
-                    <h3 class="text-xl font-semibold mb-2">Worship Team</h3>
-                    <p class="text-sm">Leading hearts into God’s presence through powerful worship.</p>
+             <div class=" p-6 rounded-xl shadow-xl transition hover:scale-105 bg-black text-white max-w-sm">
+                    <img src="media/zen.png" alt="" class="rounded-md">
+                    <h3 class="text-xl font-semibold mb-2">Zen</h3>
+                    <p class="text-sm">A powerful full-stack web app with secure login, user registration, and advanced database management. Take a look!</p>
             </div>
-             <div class="glass p-6 rounded-xl shadow-xl transition hover:scale-105 bg-white">
-                    <img src="media/church/2.jpg" alt="">
-                    <h3 class="text-xl font-semibold mb-2">Worship Team</h3>
-                    <p class="text-sm text-black">Leading hearts into God’s presence through powerful worship.</p>
             </div>
       </div>
     </section>
@@ -118,7 +116,15 @@
     </section>
     <section class="bg-[#2F2D38]">
         <h3 class="text-center">Blog</h3>
-        <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia architecto perferendis natus?</p>
+        <h2 class="text-center text-xl font-bold " id="animat">IN PROGRESS</h2>
+        <p class="text-center">These are projects I'm working on</p>
+        <div class="grid justify-center">
+            <div class=" glass p-6 rounded-xl shadow-xl transition  bg-[#0A0F2C] max-w-sm">
+                <img src="media/jamb.png" alt="" class="h-100 text-center relative left-10">
+                <h3 class="mb-2 text-center">Jamb Past Questions web</h3>
+                 <p class="text-center font-mono">an outstanding jamb app for preparation featuring offline answer, videos for understanding and free AI for tackling Problems through seamless ways</p>
+            </div>
+            </div>
     </section>
 </body>
 </html>
