--- a/adoa.html
+++ b/adoa.html
@@ -128,5 +128,19 @@
             </div>
             </div>
     </section>
+ <div class="relative w-full h-screen bg-black dark:bg-gray-900">
+  <!-- Blurred Background Image -->
+  <div class="absolute inset-0 bg-[url('/media/lang.png')] bg-cover bg-center filter blur-sm brightness-75 dark:brightness-50"></div>
+
+  <!-- Clear Foreground Text -->
+  <div class="relative z-10 flex items-center justify-center h-full">
+    <h1 class="text-white text-5xl md:text-6xl font-bold drop-shadow-xl text-center">
+      Super Clear Text in Dark Mode
+    </h1>
+  </div>
+</div>
+
+</div>
+
 </body>
 </html>
