--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
     <section id="services">
         <div class="grid items-center">
             <h1 class="mb-5 text-center font-mono font-extrabold text-5xl text-teal-500">What I  Do</h1>
-            <div class="grid grid-cols-2">
-                <span class="flex justify-center">
+            <div class="grid md:grid-cols-2">
+                <span class="flex">
                     <div class="border-1px text-center w-60">
-                        <span class="shadow-xl text-white">Fullstack Web Developer</span>
-                        <p class="shadow-50xl">My passion to solve man problems through tech has been the diving force which actually made me to learn and developing skills in all these programming languages</p>
+                        <h3 class="shadow-xl text-white font-bold text-center">Fullstack Web Developer</h3>
+                        <p class="shadow-50xl text-left">My passion to solve man problems through tech has been the diving force which actually made me to learn and developing skills in all these programming languages</p>
                     </div>
                 </span>
-                <span class="justify-end items-end">
-                    <p><span class="TT">Frontend:</span> CSS, Html, Javascript etc. <br>
+                <span class="flex justify-center">
+                    <p class=""><span class="TT">Frontend:</span> CSS, Html, Javascript etc. <br>
 
                         <span class="TT">Backend: </span>PHP, Python etc. <br>
 
@@ -62,8 +62,9 @@
                     </p>
                 </span>
             </div>
-            <div class="text-center text-[#2f2d38] font-bold">
+            <div class="text-center text-[#2f2d38] font-bold my-3">
                 <p class="text-[#EDEEF6]"> I do more than write code- I solve business problems, priorities user experience and optimize performance.</p>
+            </div>
             </div>
         </div>
     </section>
@@ -85,8 +86,8 @@
       </div>
     </section>
     <section class="" id="about">
-        <div class="grid h-screen items-center">
-            <h1 class="text-center uppercase font-bold text-teal-500 relative top-30">About Me</h1>
+        <div class="grid items-center">
+            <h1 class="text-center uppercase font-bold text-teal-500">About Me</h1>
             <div class="flex justify-center">
                 <div class="grid grid-cols-2 items-center">
                     <span class="flex justify-end">
@@ -116,7 +117,7 @@
                 </div>
             </div>
     </section>
-     <section class="bg-white">
+     <section class="bg-black">
         <h3 class="text-center">Blog</h3>
         <h2 class="text-center text-xl font-bold " id="animat">IN PROGRESS</h2>
         <p class="text-center">These are projects I'm working on</p>
