--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         <div class="grid items-center">
             <h1 class="mb-5 text-center font-mono font-extrabold text-5xl text-teal-500">What I  Do</h1>
             <div class="grid md:grid-cols-2">
-                <span class="flex">
+                <span class="flex md:justify-center">
                     <div class="border-1px text-center w-60">
                         <h3 class="shadow-xl text-white font-bold text-center">Fullstack Web Developer</h3>
                         <p class="shadow-50xl text-left">My passion to solve man problems through tech has been the diving force which actually made me to learn and developing skills in all these programming languages</p>
                     </div>
                 </span>
-                <span class="flex justify-center">
+                <span class="flex justify-center md:justify-start">
                     <p class=""><span class="TT">Frontend:</span> CSS, Html, Javascript etc. <br>
 
                         <span class="TT">Backend: </span>PHP, Python etc. <br>
